# Adversarial-Attacks

./:  exp_adv_vs_baseline.py   exp_out_of_distribution.py  FGSM_CIFAR.ipynb  FGSM_MNIST.ipynb  README.md  all_attacks.ipynb  pyproject.toml
checkpoints/: adv_full_loss_history_seed_0.npy  adv_full_loss_history_seed_1.npy  adv_full_loss_history_seed_3.npy  adv_full_loss_history_seed_4.npy  adv_full_loss_history_seed_6.npy  adv_loss_history_seed_0.npy  adv_loss_history_seed_1.npy  adv_test_history_seed_1.npy  adv_test_history_seed_2.npy  adv_test_history_seed_4.npy  adv_test_history_seed_5.npy  adv_test_history_seed_6.npy  adv_test_history_seed_9.npy  default_full_loss_history_seed_0.npy  default_full_loss_history_seed_1.npy  default_full_loss_history_seed_3.npy  default_full_loss_history_seed_5.npy  default_full_loss_history_seed_6.npy  default_full_loss_history_seed_7.npy  default_full_loss_history_seed_8.npy  default_loss_history_seed_{seed}.npy  default_test_history_seed_5.npy  default_test_history_seed_6.npy  default_test_history_seed_8.npy  pi_history_seed_0.npy  pi_history_seed_1.npy  pi_history_seed_2.npy  pi_history_seed_3.npy  pi_history_seed_5.npy  pi_history_seed_9.npy  simple_cnn_mnist.pth  simple_cnn_mnist_FGSM.pth  simple_cnn_mnist_adversarial.pth  simple_cnn_mnist_adversarial_12_attacks.pth  simple_cnn_mnist_adversarial_2attacks.pth  simple_cnn_mnist_adversarial_9_attacks_seed_0.pth  simple_cnn_mnist_adversarial_9_attacks_seed_1.pth  simple_cnn_mnist_adversarial_9_attacks_seed_3.pth  simple_cnn_mnist_adversarial_9_attacks_seed_4.pth  (+12 more)
experiments/: exp_1.py
(+53 files in other folders)
